package game.models.abilities.enums;

public enum AbilityNames {
    PUNCH,
    PISTOL,
    ELEPHANT,
    KING_KONG,
    GEAR_2,
    GEAR_4,
    GEAR_5
}
