package game.models.abilities.enums;

public enum AbilityType {
    ATTACK,
    BUFF,
    NAKAMA;
}
