package game.models.abilities.enums;

public enum NakamaNames {
    ZORO,
    NAMI,
    USOPP,
    SANJI,
    CHOPPER,
    ROBIN,
    FRANKY,
    BROOK
}
