classDiagram
    %% Core Game Classes
    class App {
        +start(Stage stage)
        +configureStage(Stage stage)
        +main(String[] args)
    }
    %% Character Classes
    class Character {
        #String name
        -StringProperty bounty
        #String posterImage
        +getName()
        +setName(String)
        +bountyProperty()
        +getBounty()
        +setBounty(String)
        +getPosterImage()
        +setPosterImage(String)
    }
    class Player {
        -IntegerProperty gold
        -Map~AbilityNames, Ability~ abilities
        -Map~NakamaNames, Nakama~ nakamas
        -List~String~ abilityDeck
        +getAbilities()
        +getAbility(AbilityNames)
        +getNakamas()
        +getNakama(NakamaNames)
        +getGold()
        +setGold(int)
        +increaseGold(int)
    }
    class Enemy {
        -int id
        +double MAX_HEALTH
        +int GOLD_BY_CLICK
        -String image
        -DoubleProperty health
        -BooleanProperty defeated
        -BooleanProperty unlocked
        +getHealth()
        +setHealth(double)
        +isDefeated()
        +setDefeated(boolean)
        +isUnlocked()
        +setUnlocked(boolean)
    }
    %% Ability Classes
    class Ability {
        <<abstract>>
        #int BASE_STRENGTH
        #String name
        #AbilityType type
        #String description
        #String image
        #int maxLevel
        #long strength
        #int cooldownTime
        #boolean available
        #boolean animating
        #IntegerProperty level
        #IntegerProperty price
        #BooleanProperty unlocked
        +cooldown()
        +upgrade()
        +use(Character)*
        +animation()*
    }
    class AttackAbility {
        +use(Character)
        +animation()
    }
    class BuffAbility {
        -int durationTime
        -Ability buffedAbility
        +use(Character)
        +applyBuff(Ability)
        +removeBuff(Ability)
        +duration(Ability)
        +animation()
    }
    class Nakama {
        -String poster2
        +use(Character)
        +stopUse()
        +upgrade()
        +animation()
    }
    %% Shop Class
    class Shop {
        <<static>>
        +buyItem(Ability)
    }
    %% Save Management Classes
    class Save {
        -String savePath
        -String saveName
        -String saveDate
        -Player player
        -ArrayList~Enemy~ enemies
        +getPlayer()
        +getEnemies()
        +getEnemy(int)
        +getSavePath()
    }
    class SaveManager {
        <<static>>
        +newGame(String, int)
        +saveGame(Save)
        +loadGame(int)
        +saveExists(int)
        -isValidSaveName(String)
        +setSaveName(String)
    }
    %% Enums
    class AbilityType {
        <<enumeration>>
        ATTACK
        BUFF
        NAKAMA
    }
    class AbilityNames {
        <<enumeration>>
        PUNCH
        PISTOL
        ELEPHANT
        KING_KONG
        GEAR_2
        GEAR_4
        GEAR_5
    }
    class NakamaNames {
        <<enumeration>>
        ZORO
        NAMI
        USOPP
        SANJI
        CHOPPER
        ROBIN
        FRANKY
        BROOK
    }
    %% Relationships
    Character <|-- Player
    Character <|-- Enemy
    Ability <|-- AttackAbility
    Ability <|-- BuffAbility
    Ability <|-- Nakama
